<resources>
    <string name="app_name">AnimationLesson</string>
    <string name="animation_drawable">AnimationDrawable</string>
    <string name="view_animations">ViewAnimation</string>
    <string name="object_animations">ObjectAnimations</string>
    <string name="scene_animations">SceneAnimations</string>
    <string name="custom_view_animations">CustomViewAnimations</string>
    <string name="value_animation">ValueAnimation</string>
    <string name="finance_custom_view">FinanceProgressView</string>
    <string name="progress_template">%d %%</string>
    <string name="click_me_button">Нажми на меня</string>
    <string name="shared_element_transition">SharedElementTransition</string>
    <string name="button_transition">button</string>
    <string name="custom_animation_transition">CustomAnimationTranstition</string>
</resources>
